footer pages bug fixing

--- a/web/html_components/public/aboutus.html
+++ b/web/html_components/public/aboutus.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="row font-size-16px text-justif">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 aboutus">
             <p>Launched in 2017, roomauction.co.uk is the simple way to search, bid and rent short to
                 long term accommodation. We aim to provide a unique and effective platform
                 which provides an exceptional property service for all potential agents,
