--- a/web/html_components/public/contactus.html
+++ b/web/html_components/public/contactus.html
@@ -5,12 +5,12 @@
         </div>
     </div>
     <div class="row font-size-16px">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 contactus">
             <p>Room Auction is operated by Cadogan McQueen Concierge Limited</p>
 
             <p>Company number: 10124266</p>
 
-            <p> &nbsp;</p>
+            <br>
 
             <p><b>Registered office: </b></p>
 
@@ -24,7 +24,7 @@
 
             <p>HA0 1SU</p>
 
-            <p> &nbsp;</p>
+            <br>
 
             <p><b>Contact us by email or call us:</b></p>
 
@@ -32,7 +32,7 @@
 
             <p>Tel: 020 3397 8425</p>
 
-            <p> &nbsp;</p>
+           <br>
         </div>
     </div>
 </div>
