--- a/web/html_components/public/faq.html
+++ b/web/html_components/public/faq.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 faq">
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default faq-custom-panel-default faq-custom-panel">
                     <div class="panel-heading" role="tab" id="headingOne">
@@ -87,7 +87,7 @@
                             <p>Bold ads appear highlighted in blue on the
                                 search results pages and feature above free listings of the same age. Upgrading
                                 also includes Early Bird access so you can contact all other users (either
-                                those advertising rooms or looking for rooms). Upgrades cost from £10.99 for 7
+                                those advertising rooms or looking for rooms). Upgrades cost from ï¿½10.99 for 7
                                 days - if you have more than one property the upgrade also lets you manage
                                 multiple adverts by buying extra listings.</p>
 
@@ -252,7 +252,7 @@
 
                             <p>1. Carefully review the listing</p>
 
-                            <p>2. Click the<b>Place Bid</b> button. You may need to sign in</p>
+                            <p>2. Click the <b>Place Bid</b> button. You may need to sign in</p>
 
                             <p>3. Enter your maximum bid, and then click the <b>Continue</b> button.</p>
 
