--- a/web/html_components/public/privacypolicy.html
+++ b/web/html_components/public/privacypolicy.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="row font-size-16px text-justify">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 privacypolicy">
             <p>This privacy policy sets out the basis on which we'll process
                 any personal data we collect from you, or which you provide to us when you
                 register and use our website, or any services provided through it (including
@@ -15,7 +15,7 @@
             <p>By browsing and/or using our website, or any services offered
                 through it, you're consenting to our processing of your personal data in
                 accordance with this privacy policy.</p>
-
+            <br>
             <ol>
                 <li><b>Contacting us</b></li>
                 <ol>
@@ -41,7 +41,7 @@
                     Email: <a href="">info@roomauction.co.uk</a><br>
                     Phone: <a href="">02033978425</a></p>
 
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>The information we collect from you</b></li>
                 <ol>
@@ -124,7 +124,7 @@
                         the site and to match you with other users of the site who you are
                         already friends with on Facebook, or who have similar interests or
                         histories to you.</li>
-                    <p>&nbsp;</p>
+                    <br>
                 </ol>
                 <li><b>Use of your information</b></li>
                 <ol>
@@ -154,7 +154,7 @@
                         <li>to provide third parties with statistical information about our users -&nbsp;<b>this
                                 information will not be able to be used to identify any individual user.</b></li>
                     </ol>
-                    <p>&nbsp;</p>
+                    <br>
                 </ol>
                 <li><b>Disclosure of your information</b></li>
                 <ol>
@@ -186,7 +186,7 @@
                             be visible to other users of the website anywhere in the world. You
                             should therefore be careful when submitting information about yourself
                             and only submit information you're happy to be publicly available.</span></li>
-                    <p>&nbsp;</p>
+                    <br>
                 </ol>
 
                 <li><b>Cookies</b></li>
@@ -219,20 +219,20 @@
                         analytics service provider will store this information. Individual users
                         will not be identifiable from this information.</li>
                     <li>In addition, we  are also using the following types of cookies on the site:</li>
-                    <p>&nbsp;</p>
+                    <br>
                 </ol>
                 <p><b>Google AdWords</b></p>
                 <p>Using Google AdWords code, we are able to see which pages helped lead to registering
                     and, where applicable, upgrading. This allows us to make better use of our paid
                     search budget on Google. You can also choose to opt-out of AdWords
                     remarketing <a href="" target="_blank">here</a>.</p>
-                <p>&nbsp;</p>
+                <br>
 
                 <p><b>DoubleClick</b></p>
                 <p>We use Google Analytics remarketing codes to log when users view specific pages or
                     take specific actions on the website. This allows us to provide targeted
                     advertising in the future when you browse other websites.</p>
-                <p>&nbsp;</p>
+                <br>
 
                 <p><b>Visual DNA</b></p>
                 <p>We use a VisualDNA tag to anonymously collect information about users' browsing
@@ -245,13 +245,13 @@
                     choosing the 'Cookie Settings' option. VisualDNA does not store or share
                     personally identifiable information with any third party, other than in
                     anonymised, aggregated form.</p>
-                <p>&nbsp;</p>
+                <br>
 
                 <p><b>Google Analytics Demographics and Interest Reporting</b></p>
                 <p>These help us better understand who our users are so we can make content on other
                     channels, such as YouTube, more relevant. You can choose to opt out of these
                     cookies <a href="" target="_blank">here</a>.</p>
-                <p>&nbsp;</p>
+                <br>
                 <li><b>Turning off cookies</b></li>
                 <ol>
                     <li>If you don't want us to install cookies
@@ -288,7 +288,7 @@
                         our website you are consenting to our use of cookies in accordance with
                         this privacy policy.</li>
                 </ol>
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>Payment information</b></li>
                 <p>All payment for any products or services offered through our site, including for
@@ -296,7 +296,7 @@
                     processors, currently WorldPay, ImpulsePay (for mobile payments) and Paypal. We
                     will not collect, store or process any credit card or other payment information
                     on our own servers. We are a Safe Buy accredited website.</p>
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>Third party content, websites and contributors</b></li>
                 <ol>
@@ -316,7 +316,7 @@
                         microsites to find out how they collect and use your personal data and to
                         establish whether and for what purpose they use cookies.</li>
                 </ol>
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>Security and data retention</b></li>
                 <ol>
@@ -330,7 +330,7 @@
                         organisational security measures to protect your data we cannot guarantee
                         the security of any data sent over the internet.</li>
                 </ol>
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>International data transfers</b></li>
                 <ol>
@@ -344,7 +344,7 @@
                         have consented; it is necessary to provide the services you have
                         requested; or it is otherwise required or permitted by law).</li>
                 </ol>
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>Your rights</b></li>
                 <ol>
@@ -352,7 +352,7 @@
                         data we hold about you and you may ask us to make any necessary changes
                         to ensure it is accurate and kept up to date. If you wish to do this,
                         please contact us using the contact information provided in section 1
-                        above. We are entitled by law to charge a fee of £10 to meet our costs in
+                        above. We are entitled by law to charge a fee of ï¿½10 to meet our costs in
                         providing you with details of the information we hold about you and we
                         may also require you to provide us with appropriate identification.</li>
                     <li>You may request that we cease sending
@@ -362,14 +362,14 @@
                         Account&quot; on the website homepage and updating your account
                         preferences.</li>
                 </ol>
-                <p>&nbsp;</p>
+                <br>
 
                 <li><b>Changes to our privacy policy</b></li>
                 <p>We reserve the right to make changes to this privacy policy from time to time. Any
                     such changes to our privacy policy will be posted to our website and, if we
                     consider it to be appropriate, sent to you by e-mail.</p>
 
-                <p>&nbsp;</p>
+                <br>
             </ol>
         </div>
     </div>
