common modal bug fixing

--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -1,16 +1,16 @@
 <div bsModal #accountSettingsSuccessModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
      <div class="modal-dialog modal-md" role="document">
         <div class="modal-content">
-            <div class="modal-header modal-header-bg">
+            <div class="modal-header">
                 <h4 class="modal-title pull-left" style="color: #FFF;">Account Settings</h4>
                 <button type="button" class="close pull-right" aria-label="Close" (click)="hideChildModal()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body text-center modal-body-text">
+            <div class="modal-body text-center">
                 Account Settings for Featured Ad is updated Successfully
             </div>
-            <div class="modal-footer modal-footer-bg"></div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
