--- a/web/html_components/public/bid.html
+++ b/web/html_components/public/bid.html
@@ -8,9 +8,9 @@
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 form-group">
             <div class="bid-history-table-layout">
                 <div class="row form-group">
-                    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 form-group">
+<!--                    <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 form-group">
                         <span class="bidders-title">Bidders: </span> <span class="bidders-content">{{product.totalBidders}}</span>
-                    </div>
+                    </div>-->
                     <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 form-group">
                         <span class="bids-title">Bids: </span> <span class="bids-content">{{product.totalBids}}</span>
                     </div>
@@ -31,8 +31,8 @@
                             <tbody>
                                 <tr *ngFor="let bid of productBidList">
                                     <td data-label="Bidder">{{bid.user.firstName}} {{bid.user.lastName}}</td>
-                                    <td data-label="Bid Amount">{{bid?.currency?.title}} {{bid.price}}</td>
-                                    <td data-label="Bid Time">{{bid.bidTime}}</td>
+                                    <td data-label="Bid Amount">{{bid.price}} £</td>
+                                    <td data-label="Bid Time">{{bid.createdTime}}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="row form-group">
                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                       <img class="img-responsive" src="resources/images/product/{{product.img}}">
+                       <a (click)="selectProduct($event, product.id)"><img class="img-responsive" src="resources/images/product/328_212/{{product.img}}"></a>
                     </div>
                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                        <a (click)="selectProduct($event, product.id)"><h3 class="bid-history-product-item-description">{{product.title}}</h3></a>
@@ -60,7 +60,7 @@
                         <h3 class="bid-history-product-item-price-title">Item Price: </h3>
                     </div>
                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <h2 class="bid-history-product-item-price-content">{{product?.basePrice}}  £</h2>
+                        <h2 class="bid-history-product-item-price-content">{{product?.basePrice}} £</h2>
                     </div>
                 </div>
                 <div class="row">
