--- a/web/html_components/admin/products.html
+++ b/web/html_components/admin/products.html
@@ -8,12 +8,12 @@
          <div class="my-ads-product-layout">
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h2 class="product-title"><a>{{product.title}}</a></h2>
+                    <a (click)="selectProduct($event, product.id)"><h2 class="product-title">{{product.title}}</h2></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                    <img class="img-responsive" src="resources/images/product/{{product.img ? product.img : 'a.jpg'}}">
+                    <a (click)="selectProduct($event, product.id)"><img class="img-responsive" src="resources/images/product/{{product.img ? product.img : 'a.jpg'}}"></a>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
                     <div class="row form-group">
