--- a/web/html_components/admin/user/userinfo.html
+++ b/web/html_components/admin/user/userinfo.html
@@ -2,10 +2,7 @@
      <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="profile-left-sidebar-ul margin-top-align">
             <li><a class="active" (click)="myprofile($event)">Profile</a></li>
-            <li><a (click)="editprofile($event)">Edit Profile</a></li>
-            <li><a (click)="uploadimg($event)">Upload Profile Picture</a></li>
-            <li><a (click)="uploaddocument($event)">Profile Verification</a></li>
-            <li><a (click)="uploadlogo($event)">Logo</a></li>
+            <!--<li><a (click)="editprofile($event)">Edit Profile</a></li>-->
         </ul>
     </div>
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
