--- a/web/html_components/admin/users.html
+++ b/web/html_components/admin/users.html
@@ -8,18 +8,24 @@
         <table class="admin-common-table">
             <thead>
                 <tr>
+                    <th>Email</th>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>Email</th>
+                    
 <!--                    <th>Edit</th>
                     <th>Delete</th>-->
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let user of userList">
-                    <td data-label="First Name">{{user.firstName}}</td>
+                    <td data-label="Email">
+                        <a (click)="selectUser($event, user.id)">{{user.email}}</a>
+                    </td>
+                    <td data-label="First Name">
+                        {{user.firstName}}
+                    </td>
                     <td data-label="Last Name">{{user.lastName}}</td>
-                    <td data-label="Email">{{user.email}}</td>
+                    
 <!--                    <td data-label="Edit"><a href="">Edit</a></td>
                     <td data-label="Delete"><a href="">Delete</a></td>-->
                 </tr>
