--- a/web/html_components/member/message/sent.html
+++ b/web/html_components/member/message/sent.html
@@ -20,7 +20,7 @@
                      <div class="row">
                         <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
                             <!--<input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox message-inbox-checkbox">--> 
-                            <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
+                            <img class="img-responsive message-inbox-user-image"  src="resources/images/profile/{{message?.from?.img}}">
                         </div>
                         <div class="col-xs-7 col-sm-8 col-md-9 col-lg-9">
                             <a (click)="selectedMessage($event, message.id)">
