--- a/web/html_components/member/profile/uploaddocument.html
+++ b/web/html_components/member/profile/uploaddocument.html
@@ -5,6 +5,7 @@
             <li><a (click)="editprofile($event)">Edit Profile</a></li>
             <li><a (click)="uploadimg($event)">Upload Profile Picture</a></li>
             <li><a class="active" (click)="uploaddocument($event)">Profile Verification</a></li>
+            <li><a (click)="uploadlogo($event)">Logo</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
