--- a/web/html_components/admin/users.html
+++ b/web/html_components/admin/users.html
@@ -3,7 +3,7 @@
         <h2 class="heading">User List</h2>
     </div>
 </div>
-<div class="row form-group">
+<div class="row form-group margin-bottom-100px">
     <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 form-group">
         <table class="admin-common-table">
             <thead>
