--- a/web/html_components/admin/user/userinfo.html
+++ b/web/html_components/admin/user/userinfo.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row margin-bottom-50px">
      <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="profile-left-sidebar-ul margin-top-align">
             <li><a class="active" (click)="myprofile($event)">Profile</a></li>
@@ -18,13 +18,13 @@
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <img class="img-responsive" src="resources/images/profile/150_150/{{user.img}}">
+                            <img class="img-responsive image150x150" src="resources/images/profile/150_150/{{user.img}}" alt="Profile Image">
                         </div>
                     </div>
                     <br/>
                     <div class="row" *ngIf="user.agentLogo != ''">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <img class="img-responsive" src="resources/images/profile/logo/100_100/{{user.agentLogo}}">
+                            <img class="img-responsive image150x100" src="resources/images/profile/logo/100_100/{{user.agentLogo}}" alt="Agent Logo">
                         </div>
                     </div>
                 </div>
