--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -303,6 +303,7 @@
                                         <div class="row  margin-bottom-50px">
                                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                 <h5>Select file(can be multiple file selection)</h5>
+                                                <h5>Image Size (Width: 328px, Height: 212px) </h5>
                                                 <div class="row">
                                                     <div class="col-xs-7 col-sm-6 col-md-4 col-lg-4">
                                                         <label class="fileContainer common-custom-button">
