--- a/web/html_components/member/profile/uploaddocument.html
+++ b/web/html_components/member/profile/uploaddocument.html
@@ -30,6 +30,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
                 <h5>Select file(can be multiple file selection)</h5>
+                 <h5>Image Size (Width: 300px, Height: 300px) </h5>
                 <div class="row">
                     <div class="col-xs-5 col-sm-4 col-md-2 col-lg-2">
                         <label class="fileContainer common-custom-button">
