--- a/web/html_components/member/profile/uploadlogo.html
+++ b/web/html_components/member/profile/uploadlogo.html
@@ -28,8 +28,8 @@
         </div>
         <div class="row margin-bottom-50px">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-                <h5>Select file(can be multiple file selection)</h5>
+                <h5>Select file(can be multiple file selection) </h5>
+                <h5>Logo Size (Width: 150px, Height: 100px) </h5>
                 <div class="row">
                     <div class="col-xs-5 col-sm-4 col-md-2 col-lg-2">
                         <label class="fileContainer common-custom-button">
