--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -96,19 +96,24 @@
                         <h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="productInfo?.user?.agentLogo != null">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <img class="img-responsive" src="resources/images/company-logo.jpg">
+                        <img class="img-responsive" src="resources/images/profile/logo/100_100/{{productInfo?.user?.agentLogo}}">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" *ngIf="productInfo?.companyName != null">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h3 class="product-info-details-left-panel-company-name">{{productInfo.companyName}}</h3>
                     </div>
                 </div>
-                 <div class="row form-group">
+                <div class="row form-group" *ngIf="productInfo?.user?.businessName != null">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                       <h3 class="product-info-details-left-panel-company-address">21 Bukit Batok Crescent #12-79 Wcega Tower Singapore 658065 Mr. S.K </h3>
+                       <h3 class="product-info-details-left-panel-company-address">{{productInfo?.user?.businessName}}</h3>
+                    </div>
+                </div>
+                <div class="row form-group" *ngIf="productInfo?.user?.address != null">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                       <h3 class="product-info-details-left-panel-company-address">{{productInfo?.user?.address}}</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -411,7 +416,7 @@
                                                 <span class="message_from_details-label">To: </span>
                                             </div>
                                             <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-                                                <span class="message_from_details_text"> Nazmul Hasan</span>
+                                                <span class="message_from_details_text"> {{productInfo?.user?.firstName}} {{productInfo?.user?.lastName}}</span>
                                             </div>
                                         </div>
                                         <div class="row form-group">
