--- a/web/html_components/public/signup.html
+++ b/web/html_components/public/signup.html
@@ -34,7 +34,7 @@
                             <input type="password" name="confirmPassword" [(ngModel)]="user.confirmPassword" class="form-control input-custom-field" placeholder="Confirm Password"/>
                         </div>
                     </div>
-                    <div class="row form-group">
+<!--                    <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <label class="radio-inline">
                                 <input id="gender-male" type="radio" name="optradio" checked> Male
@@ -43,14 +43,14 @@
                                 <input id="gender-female" type="radio" name="optradio"> Female
                             </label>
                         </div>
-                    </div>
-                    <div class="row form-group">
+                    </div>-->
+<!--                    <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <input id="landlord" type="checkbox"  name="landlord"> Landlord <br>
                             <input id="tenant" type="checkbox"  name="tenant"> Tenant <br>
                             <input id="agency" type="checkbox"  name="agency"> Agency
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
