--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -51,13 +51,13 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Min Price <span class="caret"></span></a>
                     <ul class="dropdown-menu product-info-detail-custom-dropdown-menu">
-                        <li *ngFor="let minPrice of minPriceList" ><a href="" id="{{minPrice.id}}">£{{minPrice.amount}}</a></li>
+                        <li *ngFor="let minPrice of minPriceList" >{{minPrice.title}} £</li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Max Price <span class="caret"></span></a>
                     <ul class="dropdown-menu product-info-detail-custom-dropdown-menu">
-                        <li *ngFor="let maxPrice of maxPriceList" ><a href="" id="{{maxPrice.id}}">£{{maxPrice.amount}}</a></li>
+                        <li *ngFor="let maxPrice of maxPriceList" >{{maxPrice.title}} £</li>
                     </ul>
                 </li>
                 <button type="button" class="common-custom-button custom-nav-button" data-toggle="collapse" data-target="#filsters">Filters <span class="caret"></span></button>
