--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -56,8 +56,8 @@
                                 </li>-->
                 <li class="minPrice-align">
                     <a >Min Price</a>
-                    <select class="form-control product-info-detail-minPrice">
-                        <option *ngFor="let minPrice of minPriceList" value="{{minPrice.title}} £">{{minPrice.title}} £</option>
+                    <select [(ngModel)]="searchParams.minPrice" name="minPrice" (change)="onSearchParamChange($event)" class="form-control product-info-detail-minPrice">
+                        <option *ngFor="let minPrice of minPriceList" [ngValue]="minPrice.title" >{{minPrice.title}} £</option>
                     </select> 
                 </li>
                 <!--                <li class="dropdown">
@@ -68,8 +68,8 @@
                                 </li>-->
                 <li class="maxPrice-align">
                     <a >Max Price</a>
-                    <select class="form-control product-info-detail-maxPrice">
-                        <option *ngFor="let maxPrice of maxPriceList" value="{{maxPrice.title}} £">{{maxPrice.title}} £</option>
+                    <select [(ngModel)]="searchParams.maxPrice" name="maxPrice" (change)="onSearchParamChange($event)" class="form-control product-info-detail-maxPrice">
+                        <option *ngFor="let maxPrice of maxPriceList" [ngValue]="maxPrice.title" >{{maxPrice.title}} £</option>
                     </select> 
                 </li>
                 <button type="button" class="common-custom-button custom-nav-button" data-toggle="collapse" data-target="#filsters">Filters <span class="caret"></span></button>
@@ -77,34 +77,34 @@
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Property Type</h3>
-                            <select class="form-control select-custom-field">
-                                <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
+                            <select [(ngModel)]="searchParams.productType" name="productType" (change)="onSearchParamChange($event)" class="form-control select-custom-field">
+                                <option *ngFor="let productType of productTypeList" [ngValue]="productType" >{{productType.title}}</option>
                             </select> 
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Property Size</h3>
-                            <select class="form-control select-custom-field">
-                                <option *ngFor="let productSize of productSizeList" value="{{productSize.title}}"><a id="{{productSize.id}}">{{productSize.title}}</a></option>
+                            <select [(ngModel)]="searchParams.productSize" name="productSize" (change)="onSearchParamChange($event)" class="form-control select-custom-field">
+                                <option *ngFor="let productSize of productSizeList" [ngValue]="productSize" >{{productSize.title}}</option>
                             </select> 
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Occupation</h3>
-                            <select class="form-control select-custom-field">
-                                <option *ngFor="let occupation of occupationList" value="{{occupation.title}}"><a id="{{occupation.id}}">{{occupation.title}}</a></option>
+                            <select [(ngModel)]="searchParams.occupation" name="occupation" (change)="onSearchParamChange($event)" class="form-control select-custom-field">
+                                <option *ngFor="let occupation of occupationList" [ngValue]="occupation" >{{occupation.title}}</option>
                             </select> 
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Pet</h3>
-                            <select class="form-control select-custom-field">
-                                <option *ngFor="let pet of petList" value="{{pet.title}}"><a id="{{pet.id}}">{{pet.title}}</a></option>
+                            <select [(ngModel)]="searchParams.pet" name="pet" (change)="onSearchParamChange($event)" class="form-control select-custom-field">
+                                <option *ngFor="let pet of petList" [ngValue]="pet" >{{pet.title}}</option>
                             </select> 
                         </div>                        
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
                             <h3 class="filsters-submenu-title">Duration</h3>
-                            <select class="form-control select-custom-field">
-                                <option *ngFor="let availability of availabilityList" value="{{availability.title}}"><a id="{{availability.id}}">{{availability.title}}</a></option>
+                            <select [(ngModel)]="searchParams.availability" name="availability" (change)="onSearchParamChange($event)" class="form-control select-custom-field">
+                                <option *ngFor="let availability of availabilityList" [ngValue]="availability" >{{availability.title}}</option>
                             </select> 
                         </div>
                     </div>
